# furi

./: .gitignore  preprocess_split4.py  preprocess_v3.py  pyproject.toml  requirements.txt  run.sh  setup.py  setup.sh
data/splits/: content_only.jsonl  f.dataset.jsonl  f.dataset_10.jsonl  f.dataset_100.jsonl  f.dataset_101.jsonl  f.dataset_102.jsonl  f.dataset_103.jsonl  f.dataset_104.jsonl  f.dataset_105.jsonl  f.dataset_106.jsonl  f.dataset_107.jsonl  f.dataset_108.jsonl  f.dataset_109.jsonl  f.dataset_11.jsonl  f.dataset_110.jsonl  f.dataset_111.jsonl  f.dataset_112.jsonl  f.dataset_113.jsonl  f.dataset_114.jsonl  f.dataset_115.jsonl  f.dataset_116.jsonl  f.dataset_117.jsonl  f.dataset_118.jsonl  f.dataset_119.jsonl  f.dataset_12.jsonl  f.dataset_120.jsonl  f.dataset_121.jsonl  f.dataset_122.jsonl  f.dataset_123.jsonl  f.dataset_124.jsonl  f.dataset_125.jsonl  f.dataset_126.jsonl  f.dataset_127.jsonl  f.dataset_128.jsonl  f.dataset_129.jsonl  f.dataset_13.jsonl  f.dataset_130.jsonl  f.dataset_131.jsonl  f.dataset_132.jsonl  f.dataset_133.jsonl  (+624 more)
scripts/: test.py
src/core/: config.py  singleton.py
src/data/txt/: clo_f.txt  hagun_f.txt  hogam_f.txt  masin_5.txt  masin_f.txt  masin_f2.txt  masin_f3.txt  masin_f4.txt  socsea_f.txt
src/scripts/: README_COLAB.md  colab_qloRA_train.py  train_qlora.py
